    sections and add a link to the list of sections in unstable, which
    contains longer descriptions.  (Closes: #577666)
  * Remove the footnote listing every architecture known to dpkg.  This
    list can be trivially produced by dpkg-architecture -L (already
    noted), is very long, and quickly becomes out-of-date.
  * Move silly version ordering example to a footnote.  (Closes: #560839)

 -- Bill Allombert <ballombe@debian.org>  Mon, 31 May 2010 20:00:28 +0200

debian-policy (3.8.4.0) unstable; urgency=low

  [ Bill Allombert ]
  * Also provide documents in single-file HTML format.
    Proposed by Jari Aalto.
    Closes: #544353
  * Number the DFSG points like in the social_contract document.
    Proposed by Enrico Zini.
    Closes: #550192

  [ Manoj Srivastava ]
  * [b270d2d]: Typo fix: relayed -> related. Thanks to Matt Kraai for
    pointing this out.
  * [c74ac74]: 
    Policy: Grant an FHS exception for the multiarch library directories
    Wording: Steve Langasek.
    Seconded: Aurelien Jarno
    Seconded: Julien Cristau
    Seconded: Kurt Roeckx
    Closes: #542865
  * [7ac3ee6]: 
    virtual package list: Added Doom virtual packages
    Wording: Manoj Srivastava
    Seconded: Russ Allbery 
    Seconded: Giacomo A. Catenazzi
    Closes: #518199
  * [8fd91a0]
    README Process upgrading-checklist: Created/converted to org-mode
    Wording: Manoj Srivastava
    Seconded: Russ Allbery 
    Closes: #545548
  * [4da0692]: [typo-fixes]: 
    policy: Fix a number of grammatical or typographical errors
    wording: Eric Dantan Rzewnicki
    Seconded: Manoj Srivastava
  * [112c4bc]: FHS Exceptions
    policy: Explicitly allow /selinux and /sys as FHS exceptions
    Wording: Manoj Srivastava
    Seconded: Russ Allbery <rra@debian.org>
    Seconded: Kurt Roeckx  <kurt@roeckx.be>
    Closes: #556972
    This patch explicitly allows /sys and /selinux as additional
    directories in the root file system allowed under the policy.