@@ -4,16 +4,10 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
 lang="en" xml:lang="en">
 <head>
-<div style="text-align:right;font-size:70%;white-space:nowrap;">
- <a accesskey="h" href="http://www.debian.org/"> UP </a>
- |
- <a accesskey="H" href="http://wiki.debian.org/Teams/Policy"> HOME </a>
-</div>
-
 <title>Debian Policy changes process</title>
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8"/>
 <meta name="generator" content="Org-mode"/>
-<meta name="generated" content="2009-09-13 16:13:52 CDT"/>
+<meta name="generated" content="2010-06-04 09:41:24 PDT"/>
 <meta name="author" content="Margarita Manterola, Clint Adams, Russ Allbery, and Manoj Srivastava"/>
 <meta name="description" content=""/>
 <meta name="keywords" content=""/>
@@ -43,8 +37,8 @@ lang="en" xml:lang="en">
                                  font-weight:bold; }
 
   body {
-   color: DarkSlateGrey;
-   background-color: gainsboro;
+   color: black;
+   background-color: white;
    font-family: Palatino, "Palatino Linotype", "Hoefler Text", "Times New Roman", Times, Georgia, Utopia, serif;
   }
   .org-agenda-date          { color: #87cefa;    }
@@ -58,12 +52,6 @@ lang="en" xml:lang="en">
     font-weight: bold;
   }
  
-  a {
-    color: inherit;
-    background-color: inherit;
-    font: inherit;
-    text-decoration: inherit;
-  }
   a:hover { text-decoration: underline; }
   .todo  { font-weight:bold; }
   .done { font-weight:bold; }
@@ -120,6 +108,12 @@ org_html_manager.setup ();
 </head>
 <body>
 <div id="content">
+<div id="org-div-home-and-up" style="text-align:right;font-size:70%;white-space:nowrap;">
+ <a accesskey="h" href="http://www.debian.org/"> UP </a>
+ |
+ <a accesskey="H" href="http://wiki.debian.org/Teams/Policy"> HOME </a>
+</div>
+
 <h1 class="title">Debian Policy changes process</h1>
 
 
@@ -195,9 +189,9 @@ of the Policy Team.
 
 </div>
 
-<div id="outline-container-2.1" class="outline-3">
-<h3 id="sec-2.1">State A: Issue raised </h3>
-<div class="outline-text-3" id="text-2.1">
+<div id="outline-container-2_1" class="outline-3">
+<h3 id="sec-2_1">State A: Issue raised </h3>
+<div class="outline-text-3" id="text-2_1">
 
 
 <p>
@@ -217,9 +211,9 @@ Policy, close the bug.
 
 </div>
 
-<div id="outline-container-2.2" class="outline-3">
-<h3 id="sec-2.2">State B: Discussion </h3>
-<div class="outline-text-3" id="text-2.2">
+<div id="outline-container-2_2" class="outline-3">
+<h3 id="sec-2_2">State B: Discussion </h3>
+<div class="outline-text-3" id="text-2_2">
 
 
 <p>
@@ -237,9 +231,9 @@ anything), moving to the proposal tag.
 
 </div>
 
-<div id="outline-container-2.3" class="outline-3">
-<h3 id="sec-2.3">State D: Proposal </h3>
-<div class="outline-text-3" id="text-2.3">
+<div id="outline-container-2_3" class="outline-3">
+<h3 id="sec-2_3">State C: Proposal </h3>
+<div class="outline-text-3" id="text-2_3">
 
 
 <p>
@@ -258,9 +252,9 @@ patch tag.
 
 </div>
 
-<div id="outline-container-2.4" class="outline-3">
-<h3 id="sec-2.4">State E: Wording proposed </h3>
-<div class="outline-text-3" id="text-2.4">
+<div id="outline-container-2_4" class="outline-3">
+<h3 id="sec-2_4">State D: Wording proposed </h3>
+<div class="outline-text-3" id="text-2_4">
 
 
 <p>
@@ -280,9 +274,9 @@ bug log by seconding the proposal.
 
 </div>
 
-<div id="outline-container-2.5" class="outline-3">
-<h3 id="sec-2.5">State F: Seconded </h3>
-<div class="outline-text-3" id="text-2.5">
+<div id="outline-container-2_5" class="outline-3">
+<h3 id="sec-2_5">State E: Seconded </h3>
+<div class="outline-text-3" id="text-2_5">
 
 
 <p>
@@ -312,9 +306,9 @@ seconds are reached.
 
 </div>
 
-<div id="outline-container-2.6" class="outline-3">
-<h3 id="sec-2.6">State G: Accepted </h3>
-<div class="outline-text-3" id="text-2.6">
+<div id="outline-container-2_6" class="outline-3">
+<h3 id="sec-2_6">State F: Accepted </h3>
+<div class="outline-text-3" id="text-2_6">
 
 
 <p>
@@ -332,9 +326,9 @@ a new version of Policy.
 
 </div>
 
-<div id="outline-container-2.7" class="outline-3">
-<h3 id="sec-2.7">State H: Reject </h3>
-<div class="outline-text-3" id="text-2.7">
+<div id="outline-container-2_7" class="outline-3">
+<h3 id="sec-2_7">State G: Reject </h3>
+<div class="outline-text-3" id="text-2_7">
 
 
 <p>
@@ -413,10 +407,9 @@ and wontfix (used with their normal meanings).
 </div>
 <div id="postamble">
 <p class="author"> Author: Margarita Manterola, Clint Adams, Russ Allbery, and Manoj Srivastava
-<a href="mailto:srivasta@debian.org">&lt;srivasta@debian.org&gt;</a>
 </p>
-<p class="date"> Date: 2009-09-13 16:13:52 CDT</p>
-<p class="creator">HTML generated by org-mode 6.30trans in emacs 23</p>
+<p class="date"> Date: 2010-06-04 09:41:24 PDT</p>
+<p class="creator">HTML generated by org-mode 6.36c in emacs 23</p>
 </div>
 </div>
 </body>
